docs: ES6继承与ES5继承的差异

--- a/LeetCode/index.html
+++ b/LeetCode/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
-<script src="./47.全排列II/index.js"></script>
+<script src="./48.旋转图像/index.js"></script>
 <body>
 </body>
 </html>
